--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,10 @@
  
 <header><h1>Basic HTML Text Tags</h1></header>  
 <main>
-Beginning practice with the basic text formatting tags used in HTML5.
+<comment>Beginning practice with the basic text formatting tags used in HTML5.
 
 
-<comment>Comments are used to add additional information to pages that helps developers working on that code. You can also use a comment to hide content from your page.
+Comments are used to add additional information to pages that helps developers working on that code. You can also use a comment to hide content from your page.
 Basic HTML Text Tags</comment>
 
 
