--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,10 @@
  
 <header><h1>Basic HTML Text Tags</h1></header>  
 <main>
-<comment>Beginning practice with the basic text formatting tags used in HTML5.
+<!--Beginning practice with the basic text formatting tags used in HTML5.
 
 Comments are used to add additional information to pages that helps developers working on that code. You can also use a comment to hide content from your page.
-Basic HTML Text Tags</comment>
+Basic HTML Text Tags-->
 
 <h2> Marking up Text in Blocks</h2>
 <section><p>When you have text that is displayed in a block, usually with multiple lines, it's considered a paragraph. Paragraph text can include words or phrases that are emphasized in some way, and they can contain  links and other markup used for text (but not headings). Paragraphs are block-level elements.</p><br>
