--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="Utf-8">
-    <meta name=""author name="Raymond Mercola">
+    <meta name=""author name="Raymond J. Mercola">
     <title>Campus Basic Text Tags</title>
     <link rel="stylesheet" href="styles.css">
 </head>
