--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="Utf-8">
     <meta name=""author name="Raymond J. Mercola">
     <title>Campus Basic Text Tags</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet" >
 </head>
 
 <body>
