--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="Utf-8">
-    <meta name=""author name="Raymond J. Mercola">
+    <meta name=""author name="Raymond Mercola">
     <title>Campus Basic Text Tags</title>
     <link href="styles.css" rel="stylesheet" >
 </head>
 
 <body>
  
-<header><h1>Basic HTML Text Tags</h1></header>  
+<header>
+    <h1>Basic HTML Text Tags</h1>
+</header>  
 <main>
 <!--Beginning practice with the basic text formatting tags used in HTML5.
 
