--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,9 @@
 
 <body>
  
-<header><h1>Basic HTML Text Tags</h1></header>  
+<header>
+    <h1>Basic HTML Text Tags</h1>
+</header>  
 <main>
 <!--Beginning practice with the basic text formatting tags used in HTML5.
 
