--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 Comments are used to add additional information to pages that helps developers working on that code. You can also use a comment to hide content from your page.
 Basic HTML Text Tags-->
 
-<h2> Marking up Text in Blocks</h2>
+<h2>Marking up Text in Blocks</h2>
 <section>
 <p>When you have text that is displayed in a block, usually with multiple lines, it's considered a paragraph. Paragraph text can include words or phrases that are emphasized in some way, and they can contain  links and other markup used for text (but not headings). Paragraphs are block-level elements.</p><br>
 <p>It may happen that you have text, like a poem, that requires some special formatting. You'd need to ensure that each line displayed at a proper length, and you can do that with the line break tags. These <strong>will not</strong> be used outside of that purpose or for formatting an address in an address tag. Don't add line breaks to paragraphs, forms, or other page elements. use  CSS for styling.</p><br>
@@ -27,7 +27,7 @@ Remember that you can use tags like <code>&lt;strong&gt;</code> and <code>&lt;em
 
 <h3>Excerpt from The Raven - a Poem by Edgar Allen Poe</h3>
 <section>
-<p> Once upon a midnight dreary, while I pondered, weak and weary,
+<p>Once upon a midnight dreary, while I pondered, weak and weary,
 Over many a quaint and curious volume of forgotten lore—</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;While I nodded, nearly napping, suddenly there came a tapping,
 As of some one gently rapping, rapping at my chamber door.
@@ -39,15 +39,17 @@ As of some one gently rapping, rapping at my chamber door.
 <section>
 <p> Sometimes, you are marking up small pieces of text, including single letters and words, to convey some meaning. When doing this, you want to use the most appropriate tags you can.</p><br>
 
-<p> For example, if your page offered search results, it's likely that you'd want to highlight the terms the user searched for in the results you return. If the user searched for <em>"focus area"</em> and the following paragraph was returned, those words should be highlighted in that paragraph. </p><br>
+<p>For example, if your page offered search results, it's likely that you'd want to highlight the terms the user searched for in the results you return. If the user searched for <em>"focus area"</em> and the following paragraph was returned, those words should be highlighted in that paragraph. </p><br>
 
-<p> primary <mark>focus area</mark> must be chosen from one of the four GIT <mark> focus area</mark>s (Front-end Web Design and Development; Commercial Photography and Video; Digital Design; Print; and Publishing; 2D/3D Animation). The secondary <mark>focus area</mark> can be any topic that will best aid the student's career path.</p><br>
+<p>primary <mark>focus area</mark> must be chosen from one of the four GIT <mark> focus area</mark>s (Front-end Web Design and Development; Commercial Photography and Video; Digital Design; Print; and Publishing; 2D/3D Animation). The secondary <mark>focus area</mark> can be any topic that will best aid the student's career path.</p><br>
 
-<p> We used the <code>&lt;b&gt;</code> and <code>&lt;i&gt;</code> tags above, but we haven't talked about the <code>&lt;u&gt;</code> tags. These are not often used, and can confuse the user as they style text with an underline, the same way that links do by default. A good use for these is to highlight speling errors.</p>
+<p>We used the <code>&lt;b&gt;</code> and <code>&lt;i&gt;</code> tags above, but we haven't talked about the <code>&lt;u&gt;</code> tags. These are not often used, and can confuse the user as they style text with an underline, the same way that links do by default. A good use for these is to highlight speling errors.</p>
 </section>
 </main>
 
-<Footer><cite> &copy; 2023</cite></Footer>
+<Footer>
+    <cite> &copy; 2023</cite>
+</Footer>
 
 
 
